--- a/index.html
+++ b/index.html
@@ -950,7 +950,7 @@ The service supports URL parameters or JSON parameters in the message body</p>
 </aside>
 <h2 id='response'>Response</h2>
 <p>The requesting party will receive a server response on the sucessful submission of a waybill request.
-The base object which will contain a property called “items” which consists of an array
+The base object will contain a property called “items” which consists of an array
  holding a single object with the following properties:</p>
 
 <table><thead>
