--- a/index.html
+++ b/index.html
@@ -296,7 +296,12 @@
       <div class="dark-box"></div>
       <div class="content">
         <h1 id='introduction'>Introduction</h1>
-<p>Here at BEX we frequently develop and publish new API’s to assist our customers who wish to gain deeper control and visibility into their courier processes. These API’s allow for direct integration into our courier platform, allowing data to be read and created using requests in JSON format. Couple this with our token based Authentication methods and standard HTTP verbs (which are understood by most HTTP clients) you have the capability to orchestrate and manage a number of processes within the courier environment. We hope that you will build something great and benefit from integrating to our courier API’s.</p>
+<p>Here at BEX we frequently develop and publish new API’s to assist our customers who wish to gain deeper control and visibility into their courier processes.</p>
+
+<p>These API’s allow for direct integration into our courier platform, allowing data to be read and created using requests in JSON format.
+Couple this with our token based Authentication methods and standard HTTP verbs (which are understood by most HTTP clients) you have the capability to orchestrate and manage a number of processes within the courier environment.</p>
+
+<p>We hope that you will build something great and benefit from integrating with our courier API’s.</p>
 <h1 id='requirements'>Requirements</h1>
 <p>To make use of our API integration we require the following:
 1.  A valid shipping account with BEX.
