deploy: d3fbc70a4354d4efc02d2d63b519eb3bc484da43

--- a/index.html
+++ b/index.html
@@ -304,9 +304,9 @@ Couple this with our token based Authentication methods and standard HTTP verbs 
 <p>We hope that you will build something great and benefit from integrating with our courier API’s.</p>
 <h1 id='requirements'>Requirements</h1>
 <p>To make use of our API integration we require the following:
-1.  A valid shipping account with BEX.
-2.  The creation of an integration user identity under which you will transact over the API’s
-3.  For security sensitive data requests, a valid token.</p>
+1. A valid shipping account with BEX.
+1. The creation of an integration user identity under which you will transact over the API’s
+1. For security sensitive data requests, a valid token.</p>
 
 <aside class="notice">
 Note: If you have multiple shipping accounts you are not required to transact under multiple integration identities (“tokens”). Our platform supports the assignment of multiple shipping accounts to a single token, making integration across multiple business units easier.
@@ -337,10 +337,10 @@ Parameters containing special characters that are passed in a URL request must h
 <h1 id='tools'>Tools</h1>
 <p>Some useful tools you can use to access the API include:
 Some useful tools you can use to access the API include:
-* Insomnia - Cross-platform GraphQL and REST client, available for Mac, Windows, and Linux.
-* Postman - Cross-platform REST client, available for Mac, Windows, and Linux.
-* RequestBin - Allows you test webhooks.
-* Hookbin - Another tool to test webhooks.</p>
++ Insomnia - Cross-platform GraphQL and REST client, available for Mac, Windows, and Linux.
++ Postman - Cross-platform REST client, available for Mac, Windows, and Linux.
++ RequestBin - Allows you test webhooks.
++ Hookbin - Another tool to test webhooks.</p>
 <h1 id='login'>Login</h1><h2 id='overview'>Overview</h2>
 <p>The service accepts user credentials. After validation, it returns a valid session token which is
 used to access additional services. This token string will be submitted via a cookie called “token” or
